--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,141 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+:root {
+  --color: #008bff;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  min-height: 100vh;
+  height: auto;
+  overflow-x: hidden;
+}
+.bg-content{
+  height: 100%;
+}
+.bg-content canvas{
+  position: fixed;
+}
+.card.dark {
+  --color: #22d722;
+}
+.card {
+  position: relative;
+  background-color: #ffffff21;
+  color: white;
+  border-radius: 12px;
+  padding: 16px;
+  max-width: 400px;
+  overflow: hidden;
+  margin: 20px 0;
+}
+.card h1 {
+  font-size: 20px;
+}
+
+.card p {
+  font-size: 16px;
+}
+
+.mt-16 {
+  margin-top: 16px;
+}
+
+.text-center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.profile .avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 6px solid var(--color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.card .btn_action {
+  padding: 8px 10px;
+  text-decoration: none;
   color: white;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid var(--color);
+  font-size: 16px;
+  transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card .btn_action span {
+  margin-left: 8px;
+}
+.card .btn_action:hover {
+  background-color: var(--color);
+  border: 1px solid white;
 }
 
-.App-link {
-  color: #61dafb;
+.bg_content {
+  background-color: #2927278f;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rd_12 {
+  border-radius: 12px;
+}
+
+.p_8 {
+  padding: 8px;
+}
+
+.card_body {
+  min-width: 350px;
+  z-index: 2;
+  position: relative;
+}
+
+.higthlight {
+  color: var(--color);
+  font-weight: 600;
+}
+
+.toggle-btn,
+.dark-mode {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  height: 30px;
+  width: 30px;
+  background-color: tomato;
+  border-radius: 50%;
+}
+
+.toggle-btn {
+  z-index: 3;
+  background-color: whitesmoke;
+  border: 2px solid var(--color);
+  box-shadow: 1px 1px 4px 3px #bfb3b3be;
+}
+
+.card .dark-mode {
+  z-index: 1;
+  background-color: #323030;
+  transition: 1s ease-in;
+  transform: scale(0);
+  border: 1px dashed var(--color);
+}
+
+.card.dark .toggle-btn {
+  background-color: #323030;
+}
+
+.card.dark .dark-mode {
+  transform: scale(50);
+  border: 1px dashed var(--color);
+  transition: 1s ease-in;
 }
